--- a/website/app/css/A - app.css
+++ b/website/app/css/A - app.css
@@ -10,6 +10,136 @@
   .text-md-center {
     text-align: center; } }
 
+.main {
+  height: calc(100vh - 65px);
+  background: url("../img/wall.jpg") no-repeat center/cover; }
+  @media (max-width: 768px) {
+    .main {
+      position: relative !important; }
+      .main .cover-mobile {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5); } }
+  .main .clinic {
+    margin-top: 50px;
+    text-align: center; }
+    .main .clinic .adress {
+      color: white;
+      font-size: 30px;
+      display: inline-block;
+      float: right;
+      margin-right: 224px;
+      margin-top: 70px;
+      text-shadow: 0 0 1px rgba(0, 0, 0, 0.3); }
+      @media (max-width: 768px) {
+        .main .clinic .adress {
+          margin-right: 0 !important;
+          float: none !important; } }
+      @media (max-width: 360px) {
+        .main .clinic .adress {
+          font-size: 25px !important; } }
+    .main .clinic .model {
+      font-size: 20px;
+      color: white;
+      display: inline-block;
+      background-color: rgba(0, 0, 0, 0.5);
+      padding: 11px 0 11px 0;
+      width: 100%;
+      max-width: 555px;
+      text-align: center;
+      margin: 0 auto; }
+    .main .clinic .btn {
+      margin-top: 30px;
+      background-color: #ef7f1a;
+      color: white;
+      font-size: 18px;
+      border: none;
+      padding: 12px 18px 12px 18px;
+      box-shadow: 1px 0 7px rgba(0, 0, 0, 0.3); }
+      .main .clinic .btn:focus {
+        outline: none; }
+      .main .clinic .btn:active {
+        box-shadow: inset 0px 2px 5px 0px rgba(0, 0, 0, 0.3), 1px 0 7px rgba(0, 0, 0, 0.3); }
+
+#about {
+  background: url("../img/hero_02.jpg") no-repeat center/cover; }
+  #about .col-md-10 {
+    background-color: rgba(0, 0, 0, 0.6); }
+    #about .col-md-10 .cover {
+      padding: 35px 0 45px 0;
+      width: 100%;
+      max-width: 770px; }
+      #about .col-md-10 .cover .about-clinic {
+        color: white;
+        font-size: 18px; }
+        @media (max-width: 400px) {
+          #about .col-md-10 .cover .about-clinic {
+            text-align: center;
+            font-size: 15px; } }
+
+#faq {
+  background: url("../img/hero_02.jpg") no-repeat center/cover; }
+  #faq .col-md-10 {
+    background-color: rgba(0, 0, 0, 0.6); }
+    #faq .col-md-10 .cover {
+      padding: 35px 0 45px 0;
+      width: 100%;
+      max-width: 770px; }
+      #faq .col-md-10 .cover .faq-clinic {
+        color: white;
+        font-size: 18px; }
+        #faq .col-md-10 .cover .faq-clinic span {
+          border-bottom: 1px solid white; }
+        @media (max-width: 400px) {
+          #faq .col-md-10 .cover .faq-clinic {
+            text-align: center;
+            font-size: 15px; } }
+
+#contacts {
+  background: url("../img/contatcs.jpg") no-repeat center/cover; }
+  #contacts .col-md-10 {
+    background-color: rgba(0, 0, 0, 0.6); }
+    #contacts .col-md-10 .cover {
+      padding: 35px 0 45px 0; }
+      #contacts .col-md-10 .cover .contacts-clinic {
+        color: white;
+        font-size: 30px; }
+        @media (max-width: 700px) {
+          #contacts .col-md-10 .cover .contacts-clinic {
+            font-size: 25px; } }
+        #contacts .col-md-10 .cover .contacts-clinic .map img {
+          width: 100%; }
+
+#farmacy {
+  background: url("../img/contatcs.jpg") no-repeat center/cover; }
+  #farmacy .col-md-10 {
+    background-color: rgba(0, 0, 0, 0.6); }
+    #farmacy .col-md-10 .cover {
+      padding: 35px 0 45px 0;
+      width: 100%;
+      max-width: 770px; }
+      #farmacy .col-md-10 .cover .farmacy-clinic {
+        color: white;
+        font-size: 18px; }
+        #farmacy .col-md-10 .cover .farmacy-clinic figure img {
+          margin: 25px 50px 25px 0;
+          float: left;
+          clear: both; }
+        @media (max-width: 550px) {
+          #farmacy .col-md-10 .cover .farmacy-clinic {
+            text-align: center;
+            font-size: 15px; }
+            #farmacy .col-md-10 .cover .farmacy-clinic figure {
+              text-align: center !important; }
+              #farmacy .col-md-10 .cover .farmacy-clinic figure img {
+                float: none !important;
+                clear: none !important;
+                width: 70vw;
+                margin-right: 0; } }
+
 @media (max-width: 1000px) {
   .navbar-header {
     float: none; }
@@ -66,6 +196,10 @@ body {
   .container a.navbar-brand img.logo {
     height: 45px;
     margin-top: 10px; }
+    @media (max-width: 330px) {
+      .container a.navbar-brand img.logo {
+        margin-top: 15px;
+        height: 30px; } }
 
 .navbar-collapse.collapse {
   padding-left: 0;
@@ -81,46 +215,51 @@ ul.nav.navbar-nav li {
     display: flex;
     align-items: center;
     justify-content: center; }
-  ul.nav.navbar-nav li:hover {
-    background-color: #ef7f1a; }
-    ul.nav.navbar-nav li:hover a {
+    ul.nav.navbar-nav li a:hover, ul.nav.navbar-nav li a:focus {
+      background-color: #ef7f1a;
       color: white; }
+    ul.nav.navbar-nav li a:active {
+      background-color: #e07c22; }
 
-footer a.navbar-brand {
-  float: none;
-  padding: 0 0 0 0px !important;
-  display: block;
-  margin: 0 !important;
-  height: auto !important; }
-  footer a.navbar-brand img.logo {
-    height: 58px !important;
-    display: inline; }
-
-footer .a-the-clock {
-  float: left;
-  clear: both;
-  font-size: 30px;
-  font-weight: 200 !important; }
-  footer .a-the-clock span {
-    font-weight: 600 !important; }
-  @media (max-width: 1040px) {
-    footer .a-the-clock {
-      font-size: 25px !important; } }
-  @media (max-width: 768px) {
-    footer .a-the-clock {
-      float: none !important;
-      display: block; } }
-
-footer .numbers {
-  font-size: 30px;
-  font-weight: 200;
-  float: right; }
-  footer .numbers .partnters {
-    color: #a82682; }
-  @media (max-width: 1040px) {
-    footer .numbers {
-      font-size: 25px !important; } }
-  @media (max-width: 768px) {
-    footer .numbers {
-      float: none !important;
-      display: block; } }
+footer {
+  padding: 10px 0 30px 0;
+  color: #252525; }
+  footer a.navbar-brand {
+    float: none;
+    padding: 0 0 0 0px !important;
+    display: block;
+    margin: 0 !important;
+    height: auto !important; }
+    footer a.navbar-brand img.logo {
+      height: 58px !important;
+      display: inline; }
+      @media (max-width: 360px) {
+        footer a.navbar-brand img.logo {
+          height: 45px !important; } }
+  footer .a-the-clock {
+    float: left;
+    clear: both;
+    font-size: 30px;
+    font-weight: 200 !important; }
+    footer .a-the-clock span {
+      font-weight: 600 !important; }
+    @media (max-width: 1040px) {
+      footer .a-the-clock {
+        font-size: 25px !important; } }
+    @media (max-width: 768px) {
+      footer .a-the-clock {
+        float: none !important;
+        display: block; } }
+  footer .numbers {
+    font-size: 30px;
+    font-weight: 200;
+    float: right; }
+    footer .numbers .partnters {
+      color: #a82682; }
+    @media (max-width: 1040px) {
+      footer .numbers {
+        font-size: 25px !important; } }
+    @media (max-width: 768px) {
+      footer .numbers {
+        float: none !important;
+        display: block; } }
