--- a/website/jade/index.jade
+++ b/website/jade/index.jade
@@ -8,15 +8,16 @@ html
       
     script(src="scripts/modernizr-custom.js", charset="utf-8")
     script(src="scripts/lib/angular.min.js", charset="utf-8")
+    script(src="scripts/lib/angular-ui-router.min.js", charset="utf-8")  
     script(src="../../node_modules/angular-animate/angular-animate.js", charset="utf-8")
     script(src="scripts/lib/ui-bootstrap.js", charset="utf-8")
-    script(src="scripts/lib/ctrl.js", charset="utf-8")
+    script(src="scripts/lib/A-homeCtrl.js", charset="utf-8")
       
     link(rel="stylesheet", href="css/lib/bootstrap.min.css", media="screen", title="no title")
     link(rel="stylesheet", href="css/all.css", media="screen", title="no title")
 
   body
-    main#page(ng-app="SmartVetApp")
+    main#page(ng-app="smartVetApp")
       header(ng-controller="mainCtrl")
         nav.navbar.navbar-default.bg-warning
           .container
@@ -31,11 +32,12 @@ html
                     span.icon-bar  
                 #navbar.navbar-collapse(uib-collapse="isCollapsed")
                   ul.nav.navbar-nav.navbar-right.text-uppercase
-                    li: a.align-center(href="#") Главная
-                    li: a.align-center(href="#") О клинике
-                    li: a.align-center(href="#") Вет Аптека
-                    li: a.align-center(href="#") Вопросы и ответы
-                    li: a.align-center(href="#") Контакты
+                    li: a.align-center(href="#/home") Главная
+                    li: a.align-center(href="#/about") О клинике
+                    li: a.align-center(href="#/farmacy") Вет Аптека
+                    li: a.align-center(href="#/faq") Вопросы и ответы
+                    li: a.align-center(href="#/contacts") Контакты
+      div(ui-view)
       footer.navbar-default
         .container
           .row
